<resources>
    <string name="app_name">HiWeather</string>
    <string name="view_weather">View Weather</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="label_visibility">Visibility</string>
    <string name="error_messages">Có lỗi xảy ra !</string>
    <string name="choose_on_map"><![CDATA[Chọn trên bản đồ   >]]></string>
    <string name="wind">Gió</string>
    <string name="line">|</string>
    <string name="_15_km_h">15 km/h</string>
    <string name="hum">Độ ẩm</string>
    <string name="_26">26 %</string>
    <string name="today_12_september">Hôm nay, 12 tháng 9</string>
    <string name="_29">29</string>
    <string name="clear_sky">Trời quang mây</string>
    <string name="ho_chi_minh">Hồ Chí Minh</string>
    <string name="message_network_not_responding">Mạng không phản hồi, bạn vui lòng kiểm tra kết nối wifi và mạng di động nhé!</string>
    <string name="thank_you">Cảm ơn bạn nhé!</string>
    <string name="turn_on_location">Vui lòng bật Vị Trí</string>
    <string name="location_denied">Bạn vui lòng cấp quyền truy cập vị trí để sử dụng ứng dụng nhé!</string>
    <string name="db_empty">Hiện không có dữ liệu thời tiết được lưu. Vui lòng kêt nối lại mạng !</string>
    <string name="next_forecast">Dự báo kế tiếp</string>
    <string name="hi_weather">HiWeather</string>
    <string name="back">Quay lại</string>
    <string name="today">Hôm nay</string>
    <string name="_12_sep_2024">12 Th9, 2024</string>
    <string name="sep_12">Th9, 12</string>
    <string name="_15_00">15:00</string>
    <string name="tomorrow">Ngày mai</string>
    <string name="after_tomorrow">Ngày mốt</string>
    <string name="search_here">Tìm kiếm địa điểm</string>
    <string name="cloudy">Nhiều mây</string>
    <string name="ho_chi_minh_vn">Hồ Chí Minh, VN</string>
    <string name="location_not_exist">Vị trí bạn tìm kiếm không tồn tại. Vui lòng nhập vị trí khác!</string>
    <string name="favorite_location_list">Các địa điểm yêu thích</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="rate_app">Đánh giá ứng dụng</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="contact_support">Liên hệ hỗ trợ</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="terms_and_conditions">Các điều khoản và điều kiện</string>
    <string name="other_apps">Các ứng dụng khác của chúng tôi</string>
    <string name="share_message">Tôi đang sử dụng HiWeather, ứng dụng thời tiết nhanh và tiện lợi nhất. Hãy thử NGAY!\nhttps://play.google.com/store/apps/details?id=%1$s</string>
    <string name="version">Phiên bản - v%1$s</string>
    <string name="support_message">Hãy chia sẻ với chúng tôi ý tưởng hoặc vấn đề mà bạn gặp phải! Mọi đóng góp đều rất quan trọng và chúng tôi sẽ cố gắng giải quyết nhanh nhất có thể. Cảm ơn bạn!\n\n</string>
    <string name="no_app_mail_found">Không tìm thấy ứng dụng nào để gửi email</string>
    <string name="utc_07_00">UTC+07:00</string>
    <string name="delete">Xóa</string>
    <string name="good_morning">Chào buổi sáng</string>
    <string name="notification_content">HiWeather chúc bạn một ngày mới tốt lành!</string>
    <string name="temperature">Nhiệt độ:</string>
    <string name="wind_speed">Gió:</string>
    <string name="message_network_connected">Đã kết nối Internet</string>
    <string name="last_update">Cập nhật lần cuối</string>
    <string name="favorite_list_empty">Danh sách yêu thích hiện đang trống</string>
</resources>
