<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_marginStart="@dimen/dp_10"
    android:layout_marginEnd="@dimen/dp_10"
    android:layout_marginBottom="@dimen/dp_5"
    android:id="@+id/item_favorite">

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_29"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_50"
        android:fontFamily="@font/overpass_semibold"
        android:layout_marginStart="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_celsius_symbol"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_32"
        android:fontFamily="@font/overpass_semibold"
        app:layout_constraintStart_toEndOf="@id/tv_temperature"
        app:layout_constraintTop_toTopOf="@id/tv_temperature" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ho_chi_minh"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_21"
        android:fontFamily="@font/overpass_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

    <TextView
        android:id="@+id/tv_gmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass_light"
        android:text="@string/utc_07_00"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@id/tv_time_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_city"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass_light"
        android:text="@string/last_update"
        android:textColor="@color/textMini"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass_light"
        android:text="@string/_15_00"
        android:textColor="@color/textMini"
        android:textSize="@dimen/sp_15"
        android:layout_marginStart="@dimen/dp_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_time_title" />

    <ImageView
        android:id="@+id/img_weather_icon"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:src="@drawable/ic_clouds_day"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass_light"
        android:text="@string/clear_sky"
        android:textColor="@color/textMini"
        android:textSize="@dimen/sp_15"
        android:layout_marginEnd="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_weather_icon"
        app:layout_constraintTop_toBottomOf="@id/img_weather_icon" />

    <ImageView
        android:id="@+id/img_delete"
        android:layout_width="@dimen/dp_21"
        android:layout_height="@dimen/dp_21"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="@dimen/dp_5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_weather_icon"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
