<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/dp_15"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textDailyTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/sep_12"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        android:fontFamily="@font/overpass_bold"
        android:shadowColor="@color/textShadow"
        android:shadowDx="2"
        android:shadowDy="4"
        android:shadowRadius="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/imageDailyIcon"
        android:layout_width="@dimen/dp_45"
        android:layout_height="@dimen/dp_45"
        android:padding="@dimen/dp_7"
        android:src="@drawable/ic_clouds_day"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textDailyTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_29"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        android:fontFamily="@font/overpass"
        android:shadowColor="@color/textShadow"
        android:shadowDx="2"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_celsius_symbol"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_13"
        android:fontFamily="@font/overpass"
        android:shadowColor="@color/textShadow"
        android:shadowDx="2"
        android:shadowDy="4"
        android:shadowRadius="4"
        app:layout_constraintStart_toEndOf="@id/textDailyTemperature"
        app:layout_constraintTop_toTopOf="@id/textDailyTemperature" />

</androidx.constraintlayout.widget.ConstraintLayout>
