<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_wind"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_windy"
            app:layout_constraintEnd_toStartOf="@id/tv_wind"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_25"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="2"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/wind"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@id/tv_line_wind"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_line_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="3"
            android:shadowDy="6"
            android:shadowRadius="6"
            android:text="@string/line"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="2"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/_15_km_h"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@id/tv_line_wind"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_wind">

        <ImageView
            android:id="@+id/ic_humidity"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_humidity"
            app:layout_constraintEnd_toStartOf="@id/tv_humidity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_25"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="2"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/hum"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@id/tv_line_humidity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_line_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="3"
            android:shadowDy="6"
            android:shadowRadius="6"
            android:text="@string/line"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="2"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/_26"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@id/tv_line_humidity"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
