<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_150"
        android:background="@drawable/widget_rectangle"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_125"
            android:layout_height="@dimen/dp_150"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_widget"
                android:layout_width="@dimen/dp_75"
                android:layout_height="@dimen/dp_75"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/dp_10"
                android:src="@drawable/ic_clouds_day" />

            <TextView
                android:id="@+id/tv_description_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/overpass"
                android:shadowColor="@color/textShadow"
                android:shadowDx="2"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:layout_gravity="center_horizontal"
                android:text="@string/cloudy"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_2"
            android:layout_height="@dimen/dp_100"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@color/white">
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_173"
            android:layout_height="@dimen/dp_150"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_location_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/overpass_bold"
                android:shadowColor="@color/textShadow"
                android:shadowDx="2"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_gravity="center_horizontal"
                android:text="@string/ho_chi_minh_vn"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_temperature_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_38"
                    android:fontFamily="@font/overpass_bold"
                    android:shadowColor="@color/textShadow"
                    android:shadowDx="2"
                    android:shadowDy="4"
                    android:shadowRadius="4"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/_29"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree_celsius_symbol"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:fontFamily="@font/overpass"
                    android:shadowColor="@color/textShadow"
                    android:shadowDx="3"
                    android:shadowDy="6"
                    android:shadowRadius="6"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
