<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewHourly"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dp_2"
    android:layout_marginEnd="@dimen/dp_7"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="@dimen/dp_12"
    app:strokeColor="@color/transparent"
    app:strokeWidth="@dimen/dp_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:paddingStart="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4">

        <TextView
            android:id="@+id/textHourlyTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="2"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/_29"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="2"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/degree_celsius_symbol"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            app:layout_constraintStart_toEndOf="@id/textHourlyTemperature"
            app:layout_constraintTop_toTopOf="@id/textHourlyTemperature" />

        <ImageView
            android:id="@+id/imageHourlyIcon"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:padding="@dimen/dp_7"
            android:src="@drawable/ic_clouds_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHourlyTemperature" />

        <TextView
            android:id="@+id/textHourlyTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/overpass"
            android:shadowColor="@color/textShadow"
            android:shadowDx="2"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/_15_00"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageHourlyIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
